# hermes-setup

./: .env.example  .gitignore  AGENTS.md  AGENT_SETUP.md  PREREQUISITES.md  README.md  bootstrap.ps1  bootstrap.sh  install.ps1  install.sh  profiles.json  pyproject.toml
.github/workflows/: ci.yml
.omo/run-continuation/: ses_0c43e2340ffeJeystISS0Qnp9q.json  ses_0c8fb2087ffeaUQwD7kUDzjrGm.json  ses_0c8fb4464ffe4oIaTpBuWualRi.json  ses_0c8fc081fffeVewP4WMQEkvTf3.json
configurator/: AGENTS.md  __init__.py  __main__.py  catalog.py  compile.py  emit.py  errors.py  fetch.py  ingest.py  loader.py  locks.py  manifest.py  merge.py  model.py  parse.py  profile_merge.py  readme.py  secretscan.py  setup_scripts.py  setup_skill.py  soul.py  sources.py  verify.py  yamlio.py
docs/research/: voice-tts-audio.md  voice-tts-decisions.md
locks/: AGENTS.md
templates/: AGENTS.md
templates/base/general/: template.yaml
templates/base/general-pro/: template.yaml
templates/locale/il/: template.yaml
tests/: AGENTS.md  livetest.ps1  livetest.sh  test_catalog.py  test_compile.py  test_emit.py  test_golden.py  test_ingest.py  test_manifest.py  test_merge.py  test_model.py  test_profile_merge.py  test_readme.py  test_regression.py  test_setup_scripts.py  test_setup_skill.py  test_soul.py  test_sources.py  test_verify.py
tests/blank-home/: PLAYBOOK.md  run-blank-home.ps1  run-blank-home.sh
tests/factory-home/: factory-home.ps1  factory-home.sh
tests/sandbox/: PLAYBOOK.md  hermes-blank.wsb  hyperv-checkpoint.ps1  provision.ps1  run-sandbox.ps1
(+20 files in other folders)
